# omniqueue-rs

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  testing-docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  release.yml  security.yml
_rabbit/: enabled_plugins
omniqueue/: Cargo.toml
omniqueue/src/: builder.rs  decoding.rs  encoding.rs  lib.rs  macros.rs
omniqueue/src/backends/: azure_queue_storage.rs  gcp_pubsub.rs  in_memory.rs  memory_queue.rs  mod.rs  rabbitmq.rs  redis.rs  sqs.rs
omniqueue/src/backends/redis/: cluster.rs  fallback.rs  mod.rs  sentinel.rs  streams.rs
omniqueue/src/queue/: acker.rs  consumer.rs  mod.rs  producer.rs
omniqueue/src/scheduled/: mod.rs
omniqueue/tests/: gcp_pubsub.rs  rabbitmq.rs  redis.rs  redis_cluster.rs  sqs.rs
omniqueue/tests/it/: azure_queue_storage.rs  gcp_pubsub.rs  main.rs  rabbitmq.rs  redis.rs  redis_cluster.rs  redis_fallback.rs  sqs.rs
