[package]
name = "omniqueue"
version = "0.2.1"
license = "MIT"
description = "An abstraction layer over various queue backends"
authors = ["Svix Inc. <oss@svix.com>"]
repository = "https://github.com/svix/omniqueue-rs/"
readme = "../README.md"
rust-version = "1.79"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", default-features = false, features = ["behavior-version-latest"], optional = true }
aws-sdk-sqs = { version = "1.86.0", optional = true }
azure_storage = { version = "0.21.0", optional = true }
azure_storage_queues = { version = "0.21.0", optional = true }
bb8 = { version = "0.9.0", optional = true }
bb8-redis = { version = "0.24.0", optional = true }
bytesize = "2.1.0"
futures-util = { version = "0.3.28", default-features = false, features = ["async-await", "std"], optional = true }
gcloud-googleapis = { version = "1.3.0", optional = true }
gcloud-pubsub = { version = "1.5.1", optional = true }
lapin = { version = "2", optional = true }
redis = { version = "0.32.7", features = ["tokio-comp", "tokio-native-tls-comp", "streams"], optional = true }
serde = "1.0.228"
serde_json = "1"
svix-ksuid = { version = "0.8.0", optional = true }
sync_wrapper = "1.0.1"
thiserror = "2.0"
time = "0.3.34"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
anyhow = "1.0.79"
fastrand = "2.0.1"
rstest = "0.25.0"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
tokio-executor-trait = "2.1"
tokio-reactor-trait = "1.1.0"

[features]
default = ["in_memory", "gcp_pubsub", "rabbitmq", "redis", "redis_cluster", "sqs"]
in_memory = []
gcp_pubsub = ["dep:futures-util", "dep:gcloud-googleapis", "dep:gcloud-pubsub"]
rabbitmq = ["dep:futures-util", "dep:lapin"]
# Generate message IDs for queue items. Likely not needed outside of Svix.
rabbitmq-with-message-ids = ["rabbitmq", "dep:svix-ksuid"]
redis = ["dep:bb8", "dep:bb8-redis", "dep:redis", "dep:svix-ksuid"]
redis_cluster = ["redis", "redis/cluster-async"]
redis_sentinel = ["redis", "redis/sentinel"]
sqs = ["dep:aws-config", "dep:aws-sdk-sqs", "dep:futures-util"]
azure_queue_storage = ["dep:azure_storage", "dep:azure_storage_queues"]
beta = []
